<resources>
    <string name="app_name">Linkus-demo</string>
    <string name="prompt_user">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_locale_ip">Locale IP</string>
    <string name="prompt_locale_port">Locale PORT</string>
    <string name="prompt_remote_ip">Remote IP</string>
    <string name="prompt_remote_port">Remote PORT</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="string_array_transport">
        <item>UDP</item>
        <item>TCP</item>
        <item>TLS</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_empty">Username can\'t be empty.</string>
    <string name="password_empty">Password can\'t be empty.</string>
    <string name="login_tip_login_failed">Failed to connect to server (%d)</string>
    <string name="login_tip_login_exception">Failed to connect to server</string>
    <string name="about_check_faild">Failed to update, please check your network settings.</string>
    <string name="about_check_forupdate">Check for Updates</string>
    <string name="about_check_update">Checking for new updates</string>
    <string name="about_download">New version detected. Download now?</string>
    <string name="about_downloading">Downloading</string>
    <string name="about_lastest_version">You already have the latest version.</string>
    <string name="about_new_version">A new version of %s is available now!</string>
    <string name="about_terms">I have read and agree to the above terms and conditions.</string>
    <string name="about_update">New version downloaded. Update now?</string>
    <string name="about_update_now">Update now</string>
    <string name="about_version">Version:</string>
    <string name="about_yeastar">Yeastar.com</string>
    <string name="calls_calllogs_clear">Remove</string>
    <string name="calls_dialpad_placeholder">Number</string>
    <string name="calls_navgationbar_title">Calls</string>
    <string name="calls_segment_title">Call Logs</string>
    <string name="call_add">Add Participant</string>
    <string name="call_answer">Answer</string>
    <string name="call_audio">Network status is abnormal.</string>
    <string name="call_audio_selection">Audio selection</string>
    <string name="call_audio_speaker">Speaker</string>
    <string name="call_bluetooth">Bluetooth headset</string>
    <string name="call_call">In a call</string>
    <string name="call_callback">Callback</string>
    <string name="call_calling">Calling…</string>
    <string name="call_cancel">Cancel</string>
    <string name="call_connect_server">Connecting to server</string>
    <string name="call_dial_by_mobile">Dial through Mobile</string>
    <string name="call_dial_directly">Dial Directly</string>
    <string name="call_dial_ext">Call Extension</string>
    <string name="call_dial_mobile">Call Mobile Phone</string>
    <string name="call_dial_out">Dialing</string>
    <string name="call_dial_pbx">Dial through PBX</string>
    <string name="call_dial_withprefix">Select the Call Prefix</string>
    <string name="call_earpiece">Handset earpiece</string>
    <string name="call_end_answer">End and Answer</string>
    <string name="call_flip">Call Flip</string>
    <string name="call_flip_fail_tip1">The call was not answered</string>
    <string name="call_flip_fail_tip2">Encoding Negotiation Failed</string>
    <string name="call_flip_fail_tip3">The Call Flip feature is not supported here.</string>
    <string name="call_handset">Wired headset</string>
    <string name="call_hangup_current">Hang up</string>
    <string name="call_hold">Hold</string>
    <string name="call_hold_answer">Hold and Answer</string>
    <string name="call_incoming">Incoming</string>
    <string name="call_in_a_call">You are in a call. Please retry after you finish this call.</string>
    <string name="call_member_manager">Participant Management</string>
    <string name="call_multi_party_title">With %d Participants</string>
    <string name="call_notification">Invites you to a call</string>
    <string name="call_notification_conference">Invites you to a conference call</string>
    <string name="call_notification_conference_inacall">In a conference call</string>
    <string name="call_notification_inacall">"In a call "</string>
    <string name="call_prefix">Please choose a prefix</string>
    <string name="call_prefix_custom">Custom</string>
    <string name="call_prefix_without">Dial without prefix</string>
    <string name="call_record_faild">Record failed</string>
    <string name="call_registering">Registering…</string>
    <string name="call_reject">Reject</string>
    <string name="call_requestaudio">Audio Call</string>
    <string name="call_requestvideo">Video Call</string>
    <string name="call_return_call">Return to call interface</string>
    <string name="call_ringing">Ringing…</string>
    <string name="call_selection">Call Selection</string>
    <string name="call_speaker">Speaker</string>
    <string name="call_switch">Call Switch</string>
    <string name="call_switch_detail_title1">You are on active calls on other devices. Select a call to continue it on this device.</string>
    <string name="call_switch_detail_title2">"You are on an active call with %s. Tap the call to continue it on this device. "</string>
    <string name="call_switch_fail_tip1">The call has ended.</string>
    <string name="call_switch_fail_tip2">The Call Switch feature is not supported here.</string>
    <string name="call_switch_fail_tip3">Call Switch Failed</string>
    <string name="call_switch_header_title">Touch here to start call switch</string>
    <string name="call_tansfer_attended">Attended</string>
    <string name="call_tansfer_blind">Blind</string>
    <string name="call_tip_audio">Failed to open audio. Please check your audio device.</string>
    <string name="call_tip_audio_error">Unknown audio. Please check your audio device.</string>
    <string name="call_tip_hold">Please stop holding the call</string>
    <string name="call_tip_remove_member">Delete this participant</string>
    <string name="call_transfer">Transfer</string>
    <string name="call_transfer_search">Search or Enter Number</string>
    <string name="call_trunk">Trunk</string>
    <string name="call_video_invite">%s invites you to switch to video call. Do you accept?</string>
    <string name="call_web_conference_unmute">The host invites you to turn on the microphone. Do you accept?</string>
    <string name="cdr_add">Add</string>
    <string name="cdr_call">Call</string>
    <string name="cdr_calllogs">Call Logs</string>
    <string name="cdr_contact_add">Add to Contact</string>
    <string name="cdr_contact_all">All contacts</string>
    <string name="cdr_contact_create">Create New Contact</string>
    <string name="cdr_contcats_addtoexist">Add to Existing Contact</string>
    <string name="cdr_defaultpage">No Call History</string>
    <string name="cdr_email">Email</string>
    <string name="cdr_guide">Click here to find out more</string>
    <string name="cdr_history">History</string>
    <string name="cdr_history_detail">Call History Details</string>
    <string name="cdr_input_number">Please input the phone numbers</string>
    <string name="cdr_miss">Missed</string>
    <string name="cdr_missed_call">Missed Call</string>
    <string name="cdr_mobile">Mobile</string>
    <string name="cdr_number_external">External number</string>
    <string name="cdr_recently">Recently</string>
    <string name="cdr_search_result">Search Result</string>
    <string name="cdr_tip_clear_all">Delete all call history</string>
    <string name="cdr_tip_clear_all_confirm">Are you sure to delete all call history?</string>
    <string name="cdr_tip_dial">Are you sure to dial %s?</string>
    <string name="cdr_type_incoming">Incoming call</string>
    <string name="cdr_type_outgoing">Outgoing call</string>
    <string name="cdr_video">Video</string>
    <string name="conference_add">%d more</string>
    <string name="conference_call_again">Call Again</string>
    <string name="conference_choose_number">Please choose the numbers</string>
    <string name="conference_conference">Conference</string>
    <string name="conference_contact_duplicate">Duplicate contact.</string>
    <string name="conference_create">New Conference</string>
    <string name="conference_defaultpage">No Conference History</string>
    <string name="conference_defaultpage_create">Create Conference</string>
    <string name="conference_defaultpage_tip">Click \"+\" on the upper-right corner to start a meeting</string>
    <string name="conference_detail">Details</string>
    <string name="conference_exit">EXIT</string>
    <string name="conference_externalnumber_add">Add External Number</string>
    <string name="conference_host">Host: %s</string>
    <string name="conference_list_member">%d members</string>
    <string name="conference_meeting">In Meeting</string>
    <string name="conference_mute">Mute</string>
    <string name="conference_mute_all">Mute All</string>
    <string name="conference_name">Name:</string>
    <string name="conference_start">Start Conference</string>
    <string name="conference_tip_dnd">"Failed to start conference.  Your presence status is \"Do Not Disturb\". Please change the settings beforhand.  "</string>
    <string name="conference_tip_end">The conference has ended.</string>
    <string name="conference_tip_faild">Operation failed.</string>
    <string name="conference_tip_forwarding">Failed to start conference. You have set your call forwarding status as \"Always\". Please change the settings beforhand.</string>
    <string name="conference_tip_get_information">Getting conference information.</string>
    <string name="conference_tip_loading">You are going to join the meeting.</string>
    <string name="conference_tip_meeting">You have a conference going on.</string>
    <string name="conference_tip_reach_limit">The number of conference participants has reached the limit.</string>
    <string name="conference_tip_rejoin">You have a conference going on. Click to rejoin.</string>
    <string name="conference_tip_resum">Resuming the conference.</string>
    <string name="conference_tip_save">The conference has been saved.</string>
    <string name="conference_tip_select">Only one number can be selected for the same contact.</string>
    <string name="conference_unmute">Unmute</string>
    <string name="conference_unmute_all">Unmute All</string>
    <string name="connectiontip_check_internet">1. Check if your device is connected to the Internet.</string>
    <string name="contacts_contact_system">Contacts</string>
    <string name="public_cancel">Cancel</string>
    <string name="setting_call_waiting">Call Waiting</string>
    <string name="setting_codec">Codec</string>
    <string name="setting_codec_ilbc">iLBC</string>
    <string name="setting_agc">Echo Cancellation</string>
    <string name="setting_setting">Settings</string>
    <string name="setting_ec">Echo Cancellation</string>
    <string name="setting_nc">主动降噪</string>
</resources>