<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_setting">

        <SwitchPreferenceCompat
            app:key="switch_preference_agc"
            app:title="@string/setting_agc" />

        <SwitchPreferenceCompat
            app:key="switch_preference_ec"
            app:title="@string/setting_ec" />

        <SwitchPreferenceCompat
            app:key="switch_preference_nc"
            app:title="@string/setting_nc" />

        <SwitchPreferenceCompat
            app:key="switch_preference_call_waiting"
            app:title="@string/setting_call_waiting" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/entries_str"
            app:entryValues="@array/entries_values_str"
            app:key="list_preference_codec"
            app:title="@string/setting_codec"
            app:summary="@string/setting_codec_ilbc"/>

    </PreferenceCategory>

</PreferenceScreen>